--- a/styles/estiloCalendario.css
+++ b/styles/estiloCalendario.css
@@ -1,8 +1,66 @@
-
-* {
-      /*  box-sizing: border-box;*/
+:root{/*creo variables globales*/
+  --colorMenu:#71903c;
 }
-
-ul {
-        
+body{
+    display: block;
+    width:100%;
+    height: 100%;
+    
+}
+.cabeceraPrincipal{
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    width:100%;
+    height: 5%;
+      top: 1px;
+      background-color: yellowgreen;
+}
+.reloj{
+      position:absolute;
+      display: block;
+      width:100%;
+}
+.fecha{
+    position: fixed;
+    left: 1em;
+    border-color: transparent;
+    background-color: transparent;
+    font-size: 12px;
+    text-align: left;
+    width: 25%;
+}
+.hora_actual {
+      position: fixed;
+      right: 1em;
+      border-color: transparent;
+      background-color: transparent;
+      font-size: 12px;
+      width: 25%;
+      text-align: right;
+}
+.navSup{
+      width: 100%;
+      height: 50%;
+}
+.claseMain{
+      position: absolute;
+      width: 100%;
+      height: 85%;
+      top: 5%;
+}
+.piePagina{
+      position: absolute;
+      bottom: 5%;
+      height: 1%;
+}
+#nombreMesId{
+  text-align: center;
+}
+#listaDiasId{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 90%;
+  list-style-type: none;
 }
